tests/unit/language/overloads/unknown_member_errors.arche
// RUN: not %arche -o %t %s

func a(x: int) -> int {
  return x;
}
func g = { a, missing };  // error: unknown member 'missing' in group 'g'
